# wannier90io-python

./: .flake8  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: main.yaml
api/: index.html
docs/: api.md
requirements/: Makefile  dev-requirements.in  dev-requirements.txt
search/: search_index.json
src/w90io/: __init__.py  __main__.py  _amn.py  _core.py  _eig.py  _nnkp.py  _schema.py  _win.py  _wout.py
src/wannier90io/: __init__.py  __main__.py  _chk.py  _eig.py  _mmn.py  _nnkp.py  _schema.py  _u.py  _unk.py  _wout.py
tests/: conftest.py  test_amn.py  test_chk.py  test_cli.py  test_eig.py  test_mmn.py  test_nnkp.py  test_u.py  test_unk_formatted.py  test_win.py  test_wout.py
tests/fixtures/: .gitignore  Makefile  fixtures.mk  setup.sh
