[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wannier90io"
version = "0.1.0"
description = "A Python library for Wannier90 I/O"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
  { "name" = "Jamal I. Mustafa" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy",
]

[project.urls]
repository = "https://github.com/jimustafa/wannier90-pylib-io"

[tool.hatch]
build.exclude = [
  ".github",
  ".gitignore",
  "docs",
  "mkdocs.yml",
  "tests/fixtures/wannier90-*",
  ]

[project.scripts]
w90io = "wannier90io.__main__:main"

[tool.autopep8]
select = ["E231"]

[tool.pytest.ini_options]
addopts = "--cov=wannier90io --codeblocks"
