[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wannier90io"
version = "0.1.0"
description = "A Python library for Wannier90 I/O"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { "name" = "Jamal I. Mustafa" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy",
  "pydantic",
]

[project.urls]
Documentation = "https://github.com/jimustafa/wannier90io-python#readme"
Issues = "https://github.com/jimustafa/wannier90io-python/issues"
Source = "https://github.com/jimustafa/wannier90io-python"

[tool.hatch.build]
only-packages = true

[project.scripts]
w90io = "wannier90io.__main__:main"

[tool.autopep8]
select = ["E231"]

[tool.pytest.ini_options]
addopts = "--cov=wannier90io --codeblocks"
