[metadata]
name = w90io
version = 0.1.0
author = Jamal I. Mustafa
author_email = jimustafa@gmail.com
description = A Python library for Wannier90 I/O
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jimustafa/wannier90-pylib-io
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    w90io = w90io.__main__:main
